# dvc-to-lakefs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  tests.yaml
src/dvc_to_lakefs/: cli.py  core.py  report.py
tests/: conftest.py
tests/e2e/: conftest.py  test_core.py  utils.py
tests/unit/: test_main.py
